// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  USER
  ADMIN
}

model User {
  id         String     @id @default(cuid())
  oab        String     @unique
  password   String
  email      String     @unique
  firstName  String
  lastName   String
  reputation Int        @default(0)
  role       Role       @default(USER)
  questions  Question[]
  answers    Answer[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Tag {
  tag       String          @id
  questions TagOnQuestion[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Question {
  id      String          @id @default(cuid())
  title   String
  content String
  score   Int             @default(0)
  author  User            @relation(fields: [authorId], references: [id])
  answers Answer[]
  tags    TagOnQuestion[]

  authorId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Answer {
  id       String   @id @default(cuid())
  content  String
  score    Int      @default(0)
  question Question @relation(fields: [questionId], references: [id])
  author   User     @relation(fields: [authorId], references: [id])

  questionId String
  authorId   String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model TagOnQuestion {
  tag      Tag      @relation(fields: [tagId], references: [tag])
  question Question @relation(fields: [questionId], references: [id])

  tagId      String
  questionId String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@id([tagId, questionId])
}
