//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  oab String [unique, not null]
  password String [not null]
  email String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  reputation Int [not null, default: 0]
  role Role [not null, default: 'USER']
  questions Question [not null]
  answers Answer [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Tag {
  tag String [pk]
  questions TagOnQuestion [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Question {
  id String [pk]
  title String [not null]
  content String [not null]
  score Int [not null, default: 0]
  author User [not null]
  answers Answer [not null]
  tags TagOnQuestion [not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Answer {
  id String [pk]
  content String [not null]
  score Int [not null, default: 0]
  question Question [not null]
  author User [not null]
  questionId String [not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table TagOnQuestion {
  tag Tag [not null]
  question Question [not null]
  tagId String [not null]
  questionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (tagId, questionId) [pk]
  }
}

Enum Role {
  USER
  ADMIN
}

Ref: Question.authorId > User.id

Ref: Answer.questionId > Question.id

Ref: Answer.authorId > User.id

Ref: TagOnQuestion.tagId > Tag.tag

Ref: TagOnQuestion.questionId > Question.id